# master_thesis_vulkan_engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DRAFT.md  NOTES.md  PLAN.md  README.md
assets/shaders/: common.glsl  debug_text_fragment.glsl  debug_text_vertex.glsl  deferred_geometry_fragment.glsl  deferred_geometry_vertex.glsl  deferred_lighting_fragment.glsl  deferred_lighting_vertex.glsl  forward_fragment.glsl  forward_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  ssao_fragment.glsl  ssao_vertex.glsl
diploma/: .notatki.txt.kate-swp  PracaMagisterka.aux  PracaMagisterka.bbl  PracaMagisterka.bcf  PracaMagisterka.blg  PracaMagisterka.lof  PracaMagisterka.lot  PracaMagisterka.out  PracaMagisterka.run.xml  PracaMagisterka.synctex(busy)  PracaMagisterka.tex  PracaMagisterka.toc  Szablon.blg  Szablon.cls  notatki.txt
diploma/bibliography/: bibliography.bib
diploma/chapters/: 0a_streszczenie.aux  0a_streszczenie.tex  0b_spis_tresci.aux  0c_wykaz_skrotow.aux  0c_wykaz_skrotow.tex  1_wstep.aux  1_wstep.tex  2_wprowadzenie_do_dziedziny.aux  2_wprowadzenie_do_dziedziny.tex  3_technologie_algorytmy_narzedzia.aux  3_technologie_algorytmy_narzedzia.tex  4_projekt_systemu.aux  5_badania.aux  5_badania.tex  6_podsumowanie.aux  6_podsumowanie.tex  7_wykazy.aux
diploma/renderdoc_captures/: MangoHud.conf  sponza_1600x900_1.csv  sponza_1600x900_10.csv  sponza_1600x900_100.csv  sponza_1600x900_30.csv  sponza_1600x900_75.csv  sponza_640x480_1.csv  sponza_640x480_10.csv  sponza_640x480_100.csv  sponza_640x480_30.csv  sponza_640x480_75.csv
diploma/renderdoc_captures/mangologs/: main_2022-10-12_22-45-06.csv  main_2022-10-12_22-45-06_summary.csv  main_2022-10-12_22-47-08.csv  main_2022-10-12_22-47-08_summary.csv  main_2022-10-12_22-48-28.csv  main_2022-10-12_22-48-28_summary.csv  main_2022-10-12_22-49-52.csv  main_2022-10-12_22-49-52_summary.csv  main_2022-10-12_22-51-08.csv  main_2022-10-12_22-51-08_summary.csv  main_2022-10-12_22-52-46.csv  main_2022-10-12_22-52-46_summary.csv  main_2022-10-12_22-54-04.csv  main_2022-10-12_22-54-04_summary.csv  main_2022-10-12_22-55-45.csv  main_2022-10-12_22-55-45_summary.csv  main_2022-10-12_23-09-35.csv  main_2022-10-12_23-09-35_summary.csv  main_2022-10-12_23-12-22.csv  main_2022-10-12_23-12-22_summary.csv
scripts/: asset_pipeline.py  codegen.py  codegen_constants.py  codegen_descriptors.py  codegen_globals.py  codegen_headers.py  codegen_macros.py  codegen_meta.py  config.txt  globals.py  meta.py  requirements.txt  utils.py
src/: c_parser_internal.c  c_parser_internal.h  calc.c  calc.h  calc.peg  codegen.c  main.c  main.cpp  platform.c  platform.h  test.c
src/codegen/: c_parser_internal.c  c_parser_internal.h  constants.c  constants.h  descriptors.c  descriptors.h  functions.c  functions.h  globals.c  globals.h  header.def  macros.c  macros.h  meta.c  meta.def  meta.h  parser_internal.c  parser_internal.h  render_context.c  render_context.h  scene.c  scene.h  struct.def  vulkan.c  vulkan.h  vulkan_core.c  vulkan_core.h
src/core/: alloc.c  alloc.h  core.h  junk.c  junk.h  log.c  log.h  platform.c  platform.h  serialization.c  serialization.h  struct_alloc.c  struct_alloc.h  thirdparty.c  thirdparty.h
src/data/: asset_db.c  asset_db.h  assets.c  assets.h  config.c  config.h  data.h  db.c  db.h  serialization.c  serialization.h
src/parser/: glsl_parser.c  glsl_parser.h  parser.h  parser_internal.c
src/peg/: c_parser.c  c_parser.h  c_parser.peg  c_parser_internal.c  c_parser_internal.h  glsl_parser.c  glsl_parser.h  glsl_parser.peg  parser_internal.c  parser_internal.h  peg.h
src/vulkan/: batch.c  batch.h  camera.c  camera.h  common.c  common.h  constants.h  debug.c  debug.h  device.c  device.h  functions.c  functions.h  geometry_buffer.c  geometry_buffer.h  objects.c  objects.h  render_context.c  render_context.h  scene.c  scene.h  scene_data.c  scene_data.h  shader.c  shader.h  swap_chain.c  swap_chain.h  vulkan.h
src/vulkan/assets/: assets.h  camera.c  camera.h  common.h  light.c  light.h  material.c  material.h  mesh.c  mesh.h  object.c  object.h  primitive.c  primitive.h  texture.c  texture.h  vertex_attribute.c  vertex_attribute.h
src/vulkan/data/: camera.c  camera.h  common.h  material.c  material.h  mesh.c  mesh.h  node.c  node.h  object.c  object.h  primitive.c  primitive.h  scene.c  scene.h  scene_data.c  scene_data.h  texture.c  texture.h  vertex_attribute.c  vertex_attribute.h
src/vulkan/objects/: batch.c  batch.h  buffer.c  buffer.h  camera.c  camera.h  common.h  descriptor.c  descriptor.h  device.c  device.h  device_functions.c  device_functions.h  image.c  image.h  input.c  input.h  lights.c  lights.h  pipeline.c  pipeline.h  pipeline_impl.c  pipeline_impl.h  pipeline_state.c  pipeline_state.h  render_cache.c  render_cache.h  render_cache_list.c  render_cache_list.h  render_state.c  render_state.h  renderer.c  renderer.h  shader.c  shader.h  shader_generator.c  shader_generator.h  shader_program.c  shader_program.h  shader_reflect.c  (+17 more)
src/vulkan/pipelines/: camera_state.c  camera_state.h  font_state.c  font_state.h  frame_state.c  frame_state.h  g_buffer_state.c  g_buffer_state.h  light_state.c  light_state.h  material_state.c  material_state.h  pipeline.c  pipeline.h  pipeline_defs.c  pipeline_defs.h  pipeline_impl.c  pipeline_impl.h  pipeline_shared_state.c  pipeline_shared_state.h  pipeline_state.c  pipeline_state.h  pipelines.h  shader_generator.c  shader_generator.h  shader_program.c  shader_program.h  shared_state.c  shared_state.h  skybox_state.c  skybox_state.h
src/vulkan/renderers/: batch.c  batch.h  render_cache.c  render_cache.h  render_cache_list.c  render_cache_list.h  render_graph.c  render_graph.h  render_state.c  render_state.h  renderer.c  renderer.h  renderer_cache.c  renderer_cache.h  renderer_cache_elements.c  renderer_cache_elements.h
src/vulkan/scene/: cache.c  cache.h  cache_list.c  cache_list.h  data.c  data.h  graph.c  graph.h  node.c  node.h  primitive_list.c  primitive_list.h  render_context.c  scene.c  (+8 more)
test/: c_parser_test.txt  c_parser_test_functions.txt
(+28 files in other folders)
